objects/Service_Order_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Service_Order__c</fullName>
        <label>Service Order</label>
        <referenceTo>Service_Order__c</referenceTo>
        <relationshipLabel>Service Order Assignments</relationshipLabel>
        <relationshipName>Service_Order_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service_Role__c</fullName>
        <label>Service Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Service Engineer</fullName>
                    <default>true</default>
                    <label>Service Engineer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Order_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Order Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SOA-{0000}</displayFormat>
        <label>Service Order Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Order Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>